package edu.fiuba.algo3.modelo.dado;

public interface iDado {
    public int lanzar();
}
