@startuml
skinparam linetype ortho

class Juego {
- {static}instancia: Juego
- Juego(iMapa, iDado, iGestorTurno):
- jugadorActual: iJugador
- buscarGanador(): void
- moverGladiadorAMitadMapa(Gladiador): void
- ganador: iJugador
+ tirarDado(): iJugador
+ siguienteTurno(): void
+ getJugadorActual(): iJugador
+ getGanador(): iJugador
+ {static}instanciarJuego(iMapa, iDado, iGestorTurno): Juego
+ {static}gladiadorSinLlaveLlegaAlFinal(Gladiador gladiador)
+ {static} gladiadorConLlaveLlegaAlFinal()
+ {static} resetInstancia()

}
interface iMapa
interface iGestorTurnos


interface iDado {
    public int lanzar();
}


class Dado {
  + Dado(int):
  + Dado():
  - random: Random
  - caras: int
  - numeroObtenido: int
}


interface iJugador << interface >> {
  + jugar(iDado, iMapa): void
  + getNombre(): String
  + getGladiador(): Gladiador
}

Juego o-- iMapa
Juego o-- iGestorTurnos
Juego o-- iDado
iDado <|.- Dado
Juego "1..2" o-> iJugador


@enduml